# drupal-scout

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test-release.yml
drupal_scout/: application.py  deep_scan.py  exceptions.py  mcp_server.py  module.py  output.py  worker.py  workers_manager.py
drupal_scout/formatters/: formatter.py  formatterfactory.py  jsonformatter.py  suggestformatter.py  tableformatter.py
drupal_scout/tests/: conftest.py  test_application.py  test_deep_scan.py  test_exceptions.py  test_formatterfactory.py  test_jsonformatter.py  test_mcp_server.py  test_suggestformatter.py  test_tableformatter.py  test_worker.py  test_workers_manager.py
